crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_lemma_calling_later_definition.rs
/*@
fn first(x: i32)
  req true
  ens true
{
    second(x);
}

fn second(x: i32)
  req true
  ens true
{
    assert true;
}
*/

fn main() {}
